# memex

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  README.md  alembic.ini  bridge-architecture.dot  docker-compose.yml  ingestors-architecture.dot  ingestors-architecture.mmd  local-client-architecture.dot  pyproject.toml
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: arquitectura-flujo.md  e2e-test-plan.md  experimento-codex-apartados.md  grafo-estado-del-arte.md  investigacion-contexto-web.md  modulo-eventos.md  modulo-finanzas.md  modulo-habitos.md  modulo-identidades.md  modulo-relevancia.md  subsistema-geo.md
docs/runbooks/: calendar-saneamiento.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: 0001_inbox_schema.py  0002_observability.py  0003_filter_rules_source_type.py  0004_ingestion_runs_filtered.py  0005_classifications.py  0006_summaries.py  0007_summary_link_unique_inbox.py  0008_interest_modules.py  0009_media_assets.py  0010_calendar_events.py  0011_calendar_provider_sync.py  0012_work_item_failures.py  0013_worker_runs.py  0014_llm_calls_source_id.py  0015_finance_category.py  0016_media_assets_extension.py  0017_inbox_feedback.py  0018_llm_calls_cache_hit.py  0019_auth_accounts_vault.py  0020_log_events.py  0021_worker_runs_run_type.py  0022_scheduler_settings.py  0023_module_settings_group_size.py  0024_backfill_jobs.py  0025_ingest_scheduler.py  0026_calendar_recurring_event_id.py  0027_identidades.py  0028_hackathones_events.py  0029_identidades.py  0030_module_unique_vertices.py  0031_relation_edges.py  0032_llm_calls_response_text.py  0033_identidades_v2.py  0034_finance_transactions.py  0035_identidades_pertenencia.py  0036_finance_transactions.py  0037_trace_nodes.py  0038_bienestar_registros.py  0039_bienestar_habits.py  0040_finance_event_id.py  (+43 more)
plugins/imap-university/: __init__.py  config.example.toml
plugins/outlook-desktop/: __init__.py  config.example.toml
plugins/selftest/: __init__.py  config.example.toml
scripts/: bootstrap_local.ps1  lint_no_raw_graph_writes.py
skills/memex/: SKILL.md
src/memex/: agent_cli.py  agent_event.py  config.py  db.py  google_oauth.py  logging.py  media_backfill.py  reprocess.py  reprocess_cli.py
src/memex_local/: __init__.py  cli.py  config.py  discovery.py  paths.py  protocol.py  registry.py  run.py  scheduler.py  state.py
src/memex_local_client/: __init__.py  autostart.py  backfill.py  cli.py  config.py  connect.py  discovery.py  paths.py  protocol.py  registry.py  run.py  scheduler.py  state.py
tests/: conftest.py  test_agent_cli.py  test_agent_event.py  test_api_accounts.py  test_api_auth.py  test_api_auth_logging.py  test_api_auth_vault.py  test_api_backfill.py  test_api_bienestar.py  test_api_calendar.py  test_api_feedback.py  test_api_fetch.py  test_api_filters.py  test_api_finance.py  test_api_graph.py  test_api_health.py  test_api_inbox.py  test_api_inbox_coverage.py  test_api_inbox_window.py  test_api_ingest.py  test_api_ingest_media.py  test_api_ingest_scheduler.py  test_api_llm.py  test_api_logs.py  test_api_media.py  test_api_metrics.py  test_api_middleware.py  test_api_oauth.py  test_api_pipeline.py  test_api_process.py  test_api_processing_coverage.py  test_api_processing_lot.py  test_api_relevance.py  test_api_reprocess.py  test_api_review.py  test_api_sources.py  test_api_stats.py  test_api_telegram.py  test_backfill_windows.py  test_bridge.py  (+81 more)
tests/bienestar/: test_cli.py  test_graph.py  test_habits.py  test_register.py  test_report.py
tests/calendar/: test_config.py  test_conflicts.py  test_consolidate.py  test_dedup_phase2.py  test_forget_regression.py  test_geocode.py  test_google_client.py  test_health.py  test_manual_cli.py  test_merge.py  test_participants_e2e.py  test_push.py  test_settings.py  test_sync_upsert.py
tests/finance/: test_cli.py  test_consolidate.py  test_dedup.py  test_dedup_phase2.py  test_fx.py  test_geo_places.py  test_migration_finance_transactions.py  test_module_registry.py  test_persist.py  test_register.py  test_schema.py
tests/geo/: test_cli.py  test_config.py  test_google_provider.py  test_ors_provider.py  test_place_catalog.py  test_places.py  test_service.py
tests/identidades/: test_api.py  test_backfill.py  test_card_add.py  test_classify_llm.py  test_cli.py  test_config.py  test_containment.py  test_cycle_batch_gate.py  test_dedup_llm.py  test_domain_attribution.py  test_event_correlation.py  test_fuzzy.py  test_google_people_client.py  test_health.py  test_hierarchy.py  test_identifier_uniqueness.py  test_merge.py  test_module.py  test_normalize.py  test_persist.py  test_relations_llm.py  test_resolve.py  test_resolve_context.py  test_resolve_llm.py  test_resolver_settings.py  test_resolver_window.py  test_schema.py  test_sync_upsert.py
tests/ingestors/: test_bridge_client.py  test_gateway_client.py  test_http_client.py  test_memex_server_client.py  test_runner.py
tests/llm/: test_anthropic.py  test_codex.py  test_config.py  test_consumer_settings.py  test_deepseek.py  test_fallback.py  test_grounding.py  test_json_normalize.py  test_openai.py  test_pricing.py  test_pricing_vs_tokencost.py  test_registry.py
tests/local/: test_discovery.py  test_imap_university_plugin.py  test_paths_and_config.py  test_registry.py  test_run.py  test_scheduler.py  test_state.py
tests/local_client/: conftest.py  test_autostart.py  test_backfill.py  test_connect.py  test_discovery.py  test_imap_university_plugin.py  test_paths_and_config.py  test_plugin_contracts.py  test_registry.py  test_run.py  test_scheduler.py  test_selftest_plugin.py  test_state.py
tests/notifications/: __init__.py  test_api.py  test_notifier.py  test_persistent_notifier.py  test_store.py
tests/ocr/: _pdf_fixtures.py  test_cli_reclaim.py  test_config.py  test_openai_vision.py  test_pdf.py  test_pricing.py  test_worker.py  test_zip.py
tests/relations/: __init__.py  _graph_seed.py  (+22 more)
(+545 files in other folders)
