[project]
name = "memex"
version = "0.1.0"
description = "Personal life-data consolidation — store + views layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.28.1",
    "imap-tools>=1.7",
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.35",
    "pywin32>=311; sys_platform == 'win32'",
    "telethon>=1.38,<2",
    "pymupdf>=1.24",
    "pyzipper>=0.4.0",
    "cryptography>=44",
    "argon2-cffi>=23",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=9.0.3",
    "respx>=0.21",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memex", "src/memex_local_client"]

[project.scripts]
memex-local-client = "memex_local_client.cli:main"
memex-filters = "memex.cli.filters:main"
memex-telegram = "memex.ingestors.telegram.cli:main"
memex-social = "memex.ingestors.social.cli:main"
memex-classify = "memex.classifier.cli:main"
memex-summarize = "memex.summarizer.cli:main"
memex-extract = "memex.modules.cli:main"
memex-process = "memex.modules.cli:main_process"
memex-ocr = "memex.ocr.cli:main"
memex-reprocess = "memex.reprocess_cli:main"
memex-calendar-sync = "memex.modules.calendar.cli:main"
memex-scheduler = "memex.scheduler.cli:main"
memex-ingest-scheduler = "memex.ingest_scheduler.cli:main"
memex-geo = "memex.geo.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Telethon no incluye un py.typed marker — sus tipos son dinámicos.
# Aceptamos `Any` en los puntos de contacto (parser, client, cli) y mantenemos
# las garantías de tipos en nuestros propios payloads/cursors.
module = "telethon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# boto3/botocore tampoco traen py.typed — mismos términos que telethon: los
# aceptamos como `Any` SOLO en memex/storage (el único punto de contacto), con
# nuestras firmas tipadas hacia afuera.
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# PyMuPDF trae py.typed pero sus anotaciones son INCOMPLETAS (Document no declara
# __iter__, varias funciones quedan sin tipar). `follow_imports = skip` lo trata como
# `Any` en el único punto de contacto (memex/ocr/pdf.py); nuestras firmas hacia afuera
# (PdfExtract/PdfImage) sí están tipadas y los retornos se envuelven en bytes/int/str.
module = "pymupdf"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# pyzipper no trae py.typed — mismos términos que pymupdf: lo tratamos como `Any` en el único
# punto de contacto (memex/ocr/zip.py), con nuestras firmas (ZipUnpack/ZipEntry) tipadas hacia afuera.
module = "pyzipper"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-n auto` paraleliza la suite con pytest-xdist (una DB por worker, ver tests/conftest.py).
# Para depurar un test con -s/pdb sin workers: agregar `-n0` al comando.
addopts = "-ra --tb=short --strict-markers -n auto"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
